--- a/JavaScript/渲染页面.html
+++ b/JavaScript/渲染页面.html
@@ -6,12 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
 
+        ul {
+            list-style: none;
+        }
+
+        li {
+            overflow: hidden;
+        }
+
+        li img {
+            float: left;
+            width: 100px;
+        }
     </style>
 </head>
 
 <body>
-
+    <ul>
+        <li>
+            <img src="https://static.maizuo.com/pc/v5/usr/movie/482e43f69efd52ec64575c95786c60d8.jpg?x-oss-process=image/quality,Q_70" alt="">
+            <h3>熊出没·逆转时空</h3>
+            <p>观众评分</p>
+        </li>
+    </ul>
 </body>
 
 </html>
